tests/fixtures/invalid/pow_none_list_float.py
# Cannot call pow() with None, List[int], Float
x = pow(None, [1, 2, 3], 1.0)
